styling the textarea

--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
-h3{
+body{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    min-height: 96vh;
+    font-weight: bold;
+    font-size: 30px;
     text-align: center;
+    background: linear-gradient(120deg, #4a5b75, #775017 );
+    color: antiquewhite;
+}
+
+h3{
+    margin: 50px 300px 50px 160px;
+}
+
+#generateSchedule{
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    width: 150px;
+    font-weight: bold;
+    cursor: pointer;
+    color: #57657a;
 }
 
 #teamInput{
@@ -7,10 +27,15 @@ h3{
     height: 100px;
     padding: 10px;
     border-radius: 5px;
+    font-size: 18px;
 }
 .myTextArea{
-    margin: 50px 300px 200px 400px;
+    margin: 50px 300px 100px 350px;
     display: flex;
     align-items: center;
     gap: 2rem;
+}
+
+#tableDiv{
+    margin: 50px 300px 100px 420px;
 }
