--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 h3{
-    margin: 50px 300px 50px 160px;
+   text-align: center;
 }
 
 #generateSchedule{
@@ -30,12 +30,21 @@ h3{
     font-size: 18px;
 }
 .myTextArea{
-    margin: 50px 300px 50px 350px;
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     align-items: center;
     gap: 2rem;
 }
 
 #tableDiv{
-    margin: 50px 300px 100px 420px;
+    max-width: fit-content;
+    margin-inline: auto;
+    margin-top: 10px;
+    background: wheat;
+    color:#57657a ;
+    padding: 30px;
+    border-radius: 5px;
+    font-size: 20px;
 }
